# RustCrypto-AEADs

./: .gitignore
aes-gcm/: Cargo.toml
aes-gcm/src/: lib.rs  streaming_cipher.rs
chacha20poly1305/: Cargo.toml
chacha20poly1305/src/: chunked_cipher.rs  lib.rs  streaming_cipher.rs
xaes-256-gcm/: Cargo.toml
