[package]
name = "aes-gcm"
version = "0.11.0-rc.2"
description = """
Pure Rust implementation of the AES-GCM (Galois/Counter Mode)
Authenticated Encryption with Associated Data (AEAD) Cipher
with optional architecture-specific hardware acceleration
"""
authors = ["RustCrypto Developers"]
edition = "2024"
license = "Apache-2.0 OR MIT"
readme = "README.md"
documentation = "https://docs.rs/aes-gcm"
repository = "https://github.com/RustCrypto/AEADs"
keywords = ["aead", "aes", "encryption", "gcm", "ghash"]
categories = ["cryptography", "no-std"]
rust-version = "1.85"

[dependencies]
aead = { version = "0.6.0-rc.5", default-features = false, path = "../../../RustCrypto/traits/aead" }
cipher = { version = "0.5.0-rc.3", path = "../../../RustCrypto/traits/cipher" }
ctr = { version = "0.10.0-rc.2", path = "../../../RustCrypto/block-modes/ctr" }
ghash = { version = "0.6.0-rc.3", default-features = false, path = "../../../RustCrypto/universal-hashes/ghash" } }
subtle = { version = "2", default-features = false }

# optional dependencies
aes = { version = "0.9.0-rc.2", optional = true }
zeroize = { version = "1", optional = true, default-features = false }

[dev-dependencies]
aead = { version = "0.6.0-rc.5", features = ["alloc", "dev"], default-features = false, path = "../../../RustCrypto/traits/aead" }
hex-literal = "1"

[features]
default = ["aes", "alloc", "getrandom"]
alloc = ["aead/alloc"]

arrayvec = ["aead/arrayvec"]
bytes = ["aead/bytes"]
getrandom = ["aead/getrandom"]
rand_core = ["aead/rand_core"]
chunked = ["aead/chunked"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
