[package]
name = "xaes-256-gcm"
version = "0.0.1-pre.0"
description = """
Pure Rust implementation of the XAES-256-GCM extended-nonce Authenticated
Encryption with Associated Data (AEAD).
"""
authors = ["RustCrypto Developers"]
edition = "2024"
license = "Apache-2.0 OR MIT"
readme = "README.md"
documentation = "https://docs.rs/xaes-256-gcm"
repository = "https://github.com/RustCrypto/AEADs"
keywords = ["aead", "aes", "xaes", "encryption", "extended-nonce"]
categories = ["cryptography", "no-std"]
rust-version = "1.85"

[dependencies]
aead = { version = "0.6.0-rc.1", default-features = false, path = "../../traits/aead" }
aes = { version = "0.9.0-rc.0", path = "../../block-ciphers/aes" } # aes = "0.9.0-rc.0"
aes-gcm = { version = "0.11.0-rc.0", default-features = false, features = ["aes"], path = "../aes-gcm" }
cipher = { version = "0.5.0-rc.0", path = "../../traits/cipher" } # cipher = "0.5.0-rc.0"
aead-stream = { version = "0.6.0-rc.0", optional = true, default-features = false }

[dev-dependencies]
aead = { version = "0.6.0-rc.1", features = ["dev"], default-features = false, path = "../../traits/aead" }
hex-literal = "1"

[features]
default = ["alloc", "os_rng"]
alloc = ["aead/alloc", "aead-stream?/alloc", "aes-gcm/alloc"]
arrayvec = ["aead/arrayvec", "aes-gcm/arrayvec"]
os_rng = ["aead/os_rng", "aes-gcm/os_rng", "rand_core"]
heapless = ["aead/heapless", "aes-gcm/heapless"]
rand_core = ["aead/rand_core", "aes-gcm/rand_core"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
